# agent-platform

./: .gitignore  DOCKER.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  auth.py  main.py  main.py.backup  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py
apps/backend/config/: model_registry.py  node_definitions.py  settings.py
apps/backend/db/: __init__.py  database.py  init.sql  models.py
apps/backend/db/migrations/: 001_add_users_and_ownership.sql
apps/backend/docs/: P0_CHARTER.md
apps/backend/docs/tdd/: AGENT-TOOLS-SPEC.md
apps/backend/llm/: streaming.py
apps/backend/nodes/: __init__.py  agent_node.py  base.py  dynamic_text_node.py  output_node.py  schema_node.py
apps/backend/routes/: __init__.py  runs.py  users.py  workflows.py
apps/backend/tasks/completed/: 001.a.refactory-improvements.summary.md  001.arefactor-modularize-main.md  001.b.improvements-after-feedback.md  002-implement-model-registry.md  003-automatic-node-definition-refresh.md
apps/backend/workflow/: db_executor.py  exceptions.py  executor.py  graph.py  resolver.py
apps/frontend/: .cta.json  .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/.claude/: settings.local.json
apps/frontend/scripts/: generate-api-types.sh  generate-node-palettes.ts
apps/frontend/src/: routeTree.gen.ts
apps/frontend/src/components/proto-editor/: CodeBlock.tsx  DynamicTextInput.tsx  HTMLRenderer.tsx  JsonSchemaModal.tsx  MarkdownBlock.tsx  ProtoDynamicTextNode.tsx  ProtoEditor.tsx  ProtoEditorContext.tsx  ProtoEditorPage.tsx  ProtoExecutionBar.tsx  ProtoNode.tsx  ProtoNodeBrowser.tsx  ProtoNodeFooter.tsx  ProtoNodeFrame.tsx  ProtoNodeHandle.tsx  ProtoNodeHeader.tsx  ProtoOutputNode.tsx  ProtoPropertiesPanel.tsx  ProtoSchemaNode.tsx  ProtoWorkflowToolbar.tsx  types.ts
apps/frontend/src/components/ui/: button.tsx
apps/frontend/src/hooks/: use-model-registry.ts  use-node-definitions.ts  use-workflows.ts
apps/frontend/src/lib/: nodeColors.ts
apps/frontend/src/lib/api/: workflows.ts
apps/frontend/src/lib/config/: protoEngine.ts
apps/frontend/src/lib/stores/: useProtoWorkflowStore.ts
apps/frontend/src/lib/utils/: refreshNodeDefinitions.ts
apps/frontend/src/routes/: __root.tsx  index.tsx
apps/frontend/src/routes/proto-editor/: index.tsx
apps/frontend/src/routes/workflows/: index.tsx
apps/frontend/src/styles/: colors.css  editor.css  index.css  node-palettes.css
apps/frontend/tasks/completed/: 003-automatic-node-refresh.md
tasks/: 001-dockerize.md
(+6 files in other folders)
